# service-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_schema.py
app/: config.py  main.py
app/api/: deps.py  endpoints.py  monitoring.py  reports.py  responsible.py  services.py  sla.py
app/checker/: engine.py
app/core/: exceptions.py
app/models/: __init__.py  models.py
app/notifier/: notifier.py
app/repositories/: __init__.py  base.py  check_results.py  endpoints.py  responsible.py  services.py  sla_config.py
app/scheduler/: __init__.py  scheduler.py
app/schemas/: __init__.py  check_results.py  endpoints.py  monitoring.py  responsible.py  services.py  sla_config.py
app/services/: endpoint_service.py  responsible_service.py  service_service.py  sla_config_service.py
docs/: api.md  architecture.md  database.md  performance.md
scripts/: seed_demo.sh
test-service/: Dockerfile  main.py
tests/: load_test.py
tests/integration/: conftest.py  test_endpoints_api.py  test_monitoring_e2e.py  test_notifier_mailhog.py  test_scheduler_engine.py  test_services_api.py
tests/unit/: test_check_engine.py  test_endpoint_service.py  test_exceptions.py  test_lifespan.py  test_monitoring_api.py  test_notifier_mailhog.py  test_responsible_service.py  test_scheduler_manager.py  test_schemas_endpoints.py  test_schemas_responsible.py  test_schemas_services.py  test_schemas_sla_config.py  test_service_service.py  test_sla_config_service.py
